--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,10 +9,17 @@ dependencies {
 }
 
 dependencies {
-    //compile 'com.google.apis:google-api-services-youtube:v3-rev139-1.20.0'
     compile 'com.android.support:appcompat-v7:22.2.0'
-    compile "com.mixpanel.android:mixpanel-android:4.6.0"
     compile "com.google.android.gms:play-services:7.5.0"
+    compile "com.mixpanel.android:mixpanel-android:4.6.4"
+
+    // If you wish to utilize a local version of Mixpanel not from Maven, please disable the
+    // Mixpanel dependency above and replace it with the line below
+
+    // compile project(':app:libs:mixpanel-android')
+
+    // Note that building from local libs requires one other change in the settings.gradle file
+
 }
 
 android {
